fix:click 預定行程 show signin dialog, booking.html layout align center

--- a/static/booking.css
+++ b/static/booking.css
@@ -103,6 +103,11 @@ hr {
   line-height: 40px;
 }
 
+.booking-info--center {
+  display: flex;
+  justify-content: center;
+}
+
 .booking-info__img {
   width: 340px;
   height: 200px;
